Version 10.2 - Hysteria edition. 14 June 2022

Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068
Added setting for path where to download files from the speccy and zx81 online browser
Added machine Spectrum 48k+
Added machine Timex TC2048


Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt

Improved File selector: 
-Allow to have a full screen preview if window is big enough
-Better legend key explanation

Improved Debugging: 
-Added a setting to show on which scanline has been executed a Halt, inverting border color
-When enabling step mode, emulation is paused on all menus
-Preserve step mode when exiting debug cpu that was opened by breakpoint
-When a breakpoint is fired, step mode is kept on all menus
-Breakpoints actions "call", "printc", "set-register" and "write" can now use expressions instead of fixed values
-Added breakpoint actions: "disassemble", "printregs"
-Warn on footer when step mode
-Enlarge width of breakpoints list

Improved SmartLoad & Drag-Drop: 
-Allow to load a .rom file as a custom rom file for the current machine
-Allow to Drag-Drop when menu open

Improved ZX Vision:
-Reorder windows when changing machine but only when ZEsarUX window is smaller than previous one
-Custom arrows characters
-Windows are now restored by default on starting ZEsarUX

Improved ZX Desktop:
-Added configurable icons to the ZX Desktop: icons to windows, icons to actions, file links
-Right mouse button is used now for secondary actions. It no longer simulates ESC key (unless you enable it on ZX Vision Settings)
-Allow to extend ZX Desktop vertically
-Added frame around emulated machine
-Added setting to mix scr image with background

Improved HiLow DataDrive emulation:
-Allow to Format, Browse and Chkdsk an Hilow DataDrive image (.ddh file)